appId: ${APP_ID}
name: Forgot Password
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
  - evalScript: ${output.createdUser = output.utils.createUser()}
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-1

---
- runFlow: ../../helpers/launch-app.yaml
- runFlow: ../../helpers/navigate-to-login.yaml
- tapOn:
    id: 'login-view-forgot-password'
- extendedWaitUntil:
    visible:
      id: 'forgot-password-view'
    timeout: 60000
- inputText:
    text: ${output.createdUser.email}
- tapOn:
    id: 'forgot-password-view-submit'
- extendedWaitUntil:
    visible:
      text: "If this email is registered, we'll send instructions on how to reset your password. If you do not receive an email shortly, please come back and try again."
    timeout: 60000
