appId: ${APP_ID}
name: Legal
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
tags:
  - test-1

---
- runFlow: '../../helpers/launch-app.yaml'
- runFlow: '../../helpers/navigate-to-workspace.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'login-view-more'
      IOS_LABEL: 'More'
- assertVisible:
    id: 'legal-view'
- runFlow: ../../helpers/go-back.yaml
- scrollUntilVisible:
    element:
      text: 'Create an account'
- tapOn: 'Create an account'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'register-view-more'
      IOS_LABEL: 'More'
- assertVisible:
    id: 'legal-view'
- assertVisible:
    id: 'legal-privacy-button'
