appId: ${APP_ID}
name: Login (Invalid Credentials)
onFlowStart:
  - runFlow: '../../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-2

---
- runFlow: ../../../helpers/launch-app.yaml
- runFlow: ../../../helpers/navigate-to-login.yaml
- tapOn:
    id: 'login-view-email'
- inputText: 'someusername'
- pressKey: enter
- tapOn:
    id: 'login-view-password'
- inputText: 'NotMyActualPassword'
- runFlow: '../../../helpers/hide-keyboard.yaml'
- tapOn:
    id: login-view-submit
- assertVisible:
    text: 'Your credentials were rejected! Please try again.'
