appId: ${APP_ID}
name: Create Account
onFlowStart:
  - runFlow: '../../../helpers/setup.yaml'
  - evalScript: ${output.user = output.randomUser()}
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-2

---
- runFlow: ../../../helpers/launch-app.yaml
- runFlow: ../../../helpers/navigate-to-register.yaml
- tapOn:
    id: register-view-name
- inputText: ${output.user.name}
- pressKey: enter
- tapOn:
    id: register-view-username
- inputText: ${output.user.username}
- pressKey: enter
- tapOn:
    id: register-view-email
- inputText: ${output.user.email}
- pressKey: enter
- tapOn:
    id: register-view-password
- inputText: ${output.user.password}
- pressKey: enter
- tapOn:
    id: register-view-confirm-password
- inputText: ${output.user.password}
- runFlow: '../../../helpers/hide-keyboard.yaml'
- scrollUntilVisible:
    element:
      id: register-view-submit
    centerElement: true
- tapOn:
    id: register-view-submit
- evalScript: ${output.data.accounts.push(output.user)}
- extendedWaitUntil:
    visible:
      id: rooms-list-view
    timeout: 60000
