appId: ${APP_ID}
name: Create Account (Email Already Used)
onFlowStart:
  - runFlow: '../../../helpers/setup.yaml'
  - evalScript: ${output.user = output.utils.createUser()}
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-2

---
- runFlow: ../../../helpers/launch-app.yaml
- runFlow: ../../../helpers/navigate-to-register.yaml
- tapOn:
    id: register-view-name
- inputText: ${output.user.name}
- pressKey: enter
- tapOn:
    id: register-view-username
- inputText: ${output.user.username + 'new'}
- pressKey: enter
- tapOn:
    id: register-view-email
- inputText: ${output.user.email}
- pressKey: enter
- tapOn:
    id: register-view-password
- inputText: ${output.user.password}
- pressKey: enter
- tapOn:
    id: register-view-confirm-password
- inputText: ${output.user.password}
# on ios it will hide keyboard
- tapOn: 'Password (Required)'
- scrollUntilVisible:
    element:
      id: register-view-submit
- tapOn:
    id: register-view-submit
- assertVisible: .*Email already exists.*
