appId: ${APP_ID}
name: Create DM Group
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-10

---
- runFlow: '../../helpers/launch-app.yaml'

- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.otherUser = output.utils.createUser()}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'

# should have new message screen
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
    timeout: 60000

# should have search input
- extendedWaitUntil:
    visible:
      id: 'new-message-view-search'
    timeout: 60000

# should navigate to create DM
- extendedWaitUntil:
    visible:
      id: 'new-message-view-create-direct-message'
    timeout: 60000
- tapOn:
    id: 'new-message-view-create-direct-message'

# should add users
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'select-users-view-search'
- inputText: 'rocket.cat'
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-rocket.cat'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-rocket.cat'
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'select-users-view-search'
- runFlow:
    when:
      platform: android
    commands:
      - eraseText
- runFlow:
    when:
      platform: iOS
    commands:
      - tapOn:
          text: 'Clear text'
- inputText: ${output.otherUser.username}
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-${output.otherUser.username}'
- runFlow: '../../helpers/close-search.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Create'

# check Group DM exist
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'rocket.cat, ${output.otherUser.username}'
