appId: ${APP_ID}
name: Create Room
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-10

---
- evalScript: ${output.user = output.utils.createUser()}
- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'

# should have new message screen
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
    timeout: 60000

# should have search input
- extendedWaitUntil:
    visible:
      id: 'new-message-view-search'
    timeout: 60000

# should back to rooms list
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'new-message-view-close'
      IOS_LABEL: 'Close'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
    timeout: 60000

# should search user and navigate
- extendedWaitUntil:
    visible:
      id: 'new-message-view-search'
    timeout: 60000
- tapOn:
    id: 'new-message-view-search'
- inputText: 'rocket.cat'
- extendedWaitUntil:
    visible:
      id: 'new-message-view-item-rocket.cat'
    timeout: 60000
- tapOn:
    id: 'new-message-view-item-rocket.cat'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'rocket.cat'
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000

# should navigate to select users
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'new-message-view-create-channel'
    timeout: 60000
- tapOn:
    id: 'new-message-view-create-channel'
- extendedWaitUntil:
    visible:
      id: 'select-users-view'
    timeout: 60000

# should search users
- runFlow:
    file: '../../helpers/tap-search-field.yaml'
    env:
      SEARCH_ID: 'select-users-view-search'
- inputText: 'rocket.cat'
- extendedWaitUntil:
    visible:
      id: 'select-users-view-item-rocket.cat'
    timeout: 60000

# should select/unselect user
- tapOn:
    id: 'select-users-view-item-rocket.cat'
- extendedWaitUntil:
    visible:
      id: 'selected-user-rocket.cat'
    timeout: 60000
- tapOn:
    id: 'selected-user-rocket.cat'
- extendedWaitUntil:
    notVisible:
      id: 'selected-user-rocket.cat'
    timeout: 60000
- assertVisible:
    id: 'select-users-view-item-rocket.cat'
- tapOn:
    id: 'select-users-view-item-rocket.cat'
- extendedWaitUntil:
    visible:
      id: 'selected-user-rocket.cat'
    timeout: 60000

# should navigate to create channel view
- runFlow: '../../helpers/close-search.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Next'
- extendedWaitUntil:
    visible:
      id: 'create-channel-view'
    timeout: 60000

# should render all fields
- extendedWaitUntil:
    visible:
      id: 'create-channel-name'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'create-channel-type'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'create-channel-readonly'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'create-channel-broadcast'
    timeout: 60000

# should get invalid room
- tapOn:
    id: 'create-channel-name'
- inputText: 'general'
- runFlow: '../../helpers/hide-keyboard.yaml'
- extendedWaitUntil:
    visible:
      id: 'create-channel-submit'
    timeout: 60000
- tapOn:
    id: 'create-channel-submit'
- extendedWaitUntil:
    visible:
      text: '.*A channel with name general exists.*'
    timeout: 60000
- tapOn: 'OK'

# should create public room
- evalScript: ${output.publicRoomName = 'public' + output.random()}
- tapOn:
    id: 'create-channel-name'
- eraseText: 100
- inputText: ${output.publicRoomName}
- runFlow: '../../helpers/hide-keyboard.yaml'
- tapOn:
    id: 'create-channel-type'
- extendedWaitUntil:
    visible:
      id: 'create-channel-submit'
    timeout: 60000
- tapOn:
    id: 'create-channel-submit'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.publicRoomName}
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: ${'rooms-list-view-item-' + output.publicRoomName}
    timeout: 60000

# should create private room
- evalScript: ${output.privateRoomName = 'private' + output.random()}
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'new-message-view-create-channel'
    timeout: 60000
- tapOn:
    id: 'new-message-view-create-channel'
- extendedWaitUntil:
    visible:
      id: 'select-users-view'
    timeout: 60000
- tapOn:
    id: 'select-users-view-item-rocket.cat'
- extendedWaitUntil:
    visible:
      id: 'selected-user-rocket.cat'
    timeout: 60000
- runFlow: '../../helpers/close-search.yaml'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Next'
- extendedWaitUntil:
    visible:
      id: 'create-channel-view'
    timeout: 60000
- tapOn:
    id: 'create-channel-name'
- inputText: ${output.privateRoomName}
- runFlow: '../../helpers/hide-keyboard.yaml'
- extendedWaitUntil:
    visible:
      id: 'create-channel-submit'
    timeout: 60000
- tapOn:
    id: 'create-channel-submit'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.privateRoomName}
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: ${'rooms-list-view-item-' + output.privateRoomName}
    timeout: 60000

# should create empty room
- evalScript: ${output.emptyRoomName = 'empty' + output.random()}
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- extendedWaitUntil:
    visible:
      id: 'new-message-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'new-message-view-create-channel'
    timeout: 60000
- tapOn:
    id: 'new-message-view-create-channel'
- extendedWaitUntil:
    visible:
      id: 'select-users-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Skip'
- extendedWaitUntil:
    visible:
      id: 'create-channel-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'create-channel-name'
    timeout: 60000
- tapOn:
    id: 'create-channel-name'
- inputText: ${output.emptyRoomName}
- runFlow: '../../helpers/hide-keyboard.yaml'
- extendedWaitUntil:
    visible:
      id: 'create-channel-submit'
    timeout: 60000
- tapOn:
    id: 'create-channel-submit'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.emptyRoomName}
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: ${'rooms-list-view-item-' + output.emptyRoomName}
    timeout: 60000
